components/preview/route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    preview.sonia.so/plumbing: route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: north-south
      namespace: kgateway-system
  hostnames:
    - web-pr-placeholder.sonia-certs.uk
  rules:
    - backendRefs:
        - name: web
          port: 80
